# kaspa-ng

./: .gitignore  .rustfmt.toml  Browser.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Servers.toml  Trunk.toml  build-browser  build-chrome  build-console  check  index.html  test
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  deploy.yaml
app/: Cargo.toml  index.html  manifest.json  pwa.js  services.js
app/src/: main.rs
background/: Cargo.toml
browser/: index.html
core/: CHANGELOG.md  Cargo.toml  build.rs
core/resources/i18n/: i18n.json
core/src/: adaptor.rs  app.rs  channel.rs  collection.rs  core.rs  device.rs  error.rs  events.rs  extensions.rs  fonts.rs  frame.rs  imports.rs  lib.rs  main.rs  market.rs  menu.rs  mobile.rs  network.rs  notifications.rs  panel.rs  prompt.rs  servers.rs  settings.rs  state.rs  status.rs  storage.rs  sync.rs  utils.rs  wallet.rs
core/src/egui/: button.rs  collapsable.rs  composite_button.rs  composite_icon.rs  compositebutton.rs  compositegraph.rs  compositeicon.rs  container.rs  extensions.rs  icon.rs  mnemonic.rs  mod.rs  network.rs  pagination.rs  panel.rs  popup.rs  selection_panels.rs  theme.rs
core/src/egui/easy_mark/: easy_mark_parser.rs  easy_mark_viewer.rs  mod.rs
core/src/egui/theme/: color.rs  mod.rs  style.rs
core/src/interop/: adaptor.rs  client.rs  message.rs  mod.rs  panic.rs  payload.rs  runtime.rs  signals.rs  transport.rs
core/src/interop/kaspa/: inproc.rs  mod.rs
core/src/interop/services/: metrics.rs  mod.rs  peers.rs
core/src/interop/services/kaspa/: daemon.rs  inproc.rs  logs.rs  mod.rs
core/src/modules/: about.rs  account_create.rs  account_manager.rs  block_dag.rs  changelog.rs  deposit.rs  donations.rs  export.rs  import.rs  init.rs  logs.rs  metrics.rs  mod.rs  node.rs  overview.rs  private_key_create.rs  request.rs  scanner.rs  send.rs  settings.rs  testing.rs  transactions.rs  wallet_create.rs  wallet_open.rs  wallet_secret.rs  welcome.rs
core/src/modules/account_manager/: address.rs  balance.rs  destination.rs  details.rs  estimator.rs  menus.rs  mod.rs  network.rs  overview.rs  processor.rs  qr.rs  secret.rs  transactions.rs  transfer.rs  utxo.rs
core/src/modules/settings/: mod.rs
core/src/modules/tools/: check_balance.rs  mod.rs
core/src/primitives/: account.rs  block.rs  descriptor.rs  descriptors.rs  mod.rs  transaction.rs
core/src/runtime/: channel.rs  device.rs  mod.rs  panic.rs  payload.rs  signals.rs  system.rs
core/src/runtime/kaspa/: config.rs  daemon.rs  inproc.rs  logs.rs  mod.rs
core/src/runtime/plugins/: mod.rs
core/src/runtime/plugins/market_monitor/: coingecko.rs  coinmarketcap.rs  mod.rs
core/src/runtime/services/: blockdag_monitor.rs  feerate_monitor.rs  metrics.rs  metrics_monitor.rs  mod.rs  peer_monitor.rs  plugin_manager.rs  remote.rs  repaint_service.rs  update_monitor.rs
core/src/runtime/services/kaspa/: config.rs  daemon.rs  inproc.rs  logs.rs  mod.rs
core/src/runtime/services/market_monitor/: coingecko.rs  coinmarketcap.rs  mod.rs
core/src/tests/: mod.rs  transactions.rs
core/src/utils/: arglist.rs  average.rs  color.rs  format.rs  i18n.rs  image.rs  math.rs  mnemonic.rs  mod.rs  parse.rs  qr.rs  secret.rs  version.rs  wallet.rs
extensions/adapter/: Cargo.toml
extensions/adapter/src/: lib.rs  server.rs
extensions/chrome/: Cargo.toml  Chrome.toml  api.js  app.js  background.js  check  content-script.js  index.html  manifest.json  offscreen.html  offscreen.js  popup-sandbox.html  popup.html  popup.js  pwa.js  sandbox.html  style.css  trunk.html
extensions/chrome/src/: client.rs  error.rs  imports.rs  ipc.rs  lib.rs  server.rs  transport.rs
ipc/: Cargo.toml  build.sh
ipc/src/: lib.rs
ipc/test/: api.mjs  test.mjs
macros/: Cargo.toml
macros/src/: crnd.rs  lib.rs  mask.rs  register.rs
resources/: app.js  manifest.json  pwa.js  style.css
resources/i18n/: i18n.json
src/: adaptor.rs  egui.rs  error.rs  events.rs  icons.rs  imports.rs  lib.rs  main.rs  network.rs  notifications.rs  panel.rs  prompt.rs  render.rs  secret.rs  sequence.rs  settings.rs  stages.rs  sync.rs  theme.rs  utils.rs  wallet.rs  wizard.rs
src/egui/: mod.rs
src/interop/: channel.rs  executor.rs  mod.rs  panic.rs  payload.rs  service.rs  signals.rs  tokio.rs  wallet.rs  wasm.rs
src/interop/kaspa/: config.rs  daemon.rs  inproc.rs  mod.rs
src/interop/kaspad/: config.rs  inproc.rs  mod.rs
src/modules/: account_create.rs  account_manager.rs  accounts.rs  deposit.rs  import.rs  metrics.rs  mod.rs  open.rs  send.rs  settings.rs  wallet_create.rs  wallet_open.rs
src/modules/tools/: check_balance.rs
src/modules/wizards/: account.rs  export.rs  import.rs  wallet.rs
src/primitives/: account.rs
src/section/: account.rs  accounts.rs  create.rs  create_wallet.rs  deposit.rs  import.rs  metrics.rs  mod.rs  open copy.rs  open.rs  overview.rs  request.rs  send.rs  settings.rs  tools.rs  transactions.rs  unlock.rs
src/section/wizards/: account.rs  export.rs  import.rs  mod.rs  wallet.rs
src/sections/: accounts.rs  deposit.rs  mod.rs  overview.rs  request.rs  send.rs  settings.rs  transactions.rs  unlock.rs
