[workspace]
resolver = "2"
members = [
    "app",
    "core",
    "macros",
    "extensions/chrome",
]
default-members = ["app"]

[workspace.package]
rust-version = "1.77.1"
version = "0.2.5"
authors = ["ASPECTRON Inc.","Kaspa Developers"]
license = "PROPRIETARY"
edition = "2021"
repository = "https://github.com/aspectron/kaspa-ng"

[workspace.dependencies]

kaspa-ng = { version = "0.2.3", path = "app/" }
kaspa-ng-core = { version = "0.2.3", path = "core/" }
kaspa-ng-macros = { version = "0.2.3", path = "macros/" }

# ___________________
#  ____ ____ _  _ _ 
#  |___ | __ |  | | 
#  |___ |__] |__| | 
# ___________________

egui = "=0.24.0"
epaint = "=0.24.0"
egui_plot = "=0.24.0"
egui_extras = { version = "=0.24.0", features = ["svg","image"] }
eframe = { version = "=0.24.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui-phosphor = { version = "=0.3.1", features = ["thin","light","regular","bold"] }
egui-notify = "=0.11.0"
# egui-toast = "0.9.0"

# egui = { path = "../egui/crates/egui" }
# egui_extras = { path = "../egui/crates/egui_extras", features = ["svg", "image"] }
# eframe = { path = "../egui/crates/eframe", default-features = false, features = [
#     "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
#     "default_fonts", # Embed the default egui fonts.
#     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
#     "persistence",   # Enable restoring app state when restarting the app.
# ] }
# egui-phosphor = { path = "../egui-phosphor", features = ["thin","light","regular","bold"] }
# egui-notify = { path = "../egui-notify" }
# egui-toast = { path = "../egui-toast" }

# _______________________________________________________
#  ____ _  _ ____ ___ _   _    _  _ ____ ____ ___  ____ 
#  |__/ |  | [__   |   \_/  __ |_/  |__| [__  |__] |__| 
#  |  \ |__| ___]  |    |      | \_ |  | ___] |    |  | 
# _______________________________________________________

# kaspa-addresses = "0.13.4"
# kaspa-alloc = "0.13.4"
# kaspa-bip32 = "0.13.4"
# kaspa-cli = "0.13.4"
# kaspa-consensus-core = "0.13.4"
# kaspa-core = "0.13.4"
# kaspa-metrics-core = "0.13.4"
# kaspa-notify = "0.13.4"
# kaspa-rpc-core = "0.13.4"
# kaspa-rpc-service = "0.13.4"
# kaspa-utils = "0.13.4"
# kaspa-wallet-core = "0.13.4"
# kaspa-wrpc-client = "0.13.4"
# kaspa-wrpc-server = "0.13.4"
# kaspad = "0.13.4"

# kaspa-addresses = { path = "../rusty-kaspa/crypto/addresses" }
# kaspa-alloc = { path = "../rusty-kaspa/utils/alloc" }
# kaspa-bip32 = { path = "../rusty-kaspa/wallet/bip32" }
# kaspa-cli = { path = "../rusty-kaspa/cli" }
# kaspa-consensus-core = { path = "../rusty-kaspa/consensus/core" }
# kaspa-core = { path = "../rusty-kaspa/core" }
# kaspa-metrics-core = { path = "../rusty-kaspa/metrics/core" }
# kaspa-notify = { path = "../rusty-kaspa/notify" }
# kaspa-rpc-core = { path = "../rusty-kaspa/rpc/core" }
# kaspa-rpc-service = { path = "../rusty-kaspa/rpc/service" }
# kaspa-utils = { path = "../rusty-kaspa/utils" }
# kaspa-wallet-core = { path = "../rusty-kaspa/wallet/core" }
# kaspa-wallet-keys = { path = "../rusty-kaspa/wallet/keys" }
# kaspa-wrpc-client = { path = "../rusty-kaspa/rpc/wrpc/client"}
# kaspa-wrpc-server = { path = "../rusty-kaspa/rpc/wrpc/server" }
# kaspad = { path = "../rusty-kaspa/kaspad" }

# kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-alloc = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-bip32 = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-cli = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-metrics-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-notify = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-rpc-service = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-utils = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-wallet-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-wallet-keys = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-wrpc-server = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspad = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }

kaspa-addresses = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "typescript" }
kaspa-alloc = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "typescript" }
kaspa-bip32 = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "typescript" }
kaspa-cli = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "typescript" }
kaspa-consensus-core = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "typescript" }
kaspa-core = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "typescript" }
kaspa-metrics-core = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "typescript" }
kaspa-notify = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "typescript" }
kaspa-rpc-core = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "typescript" }
kaspa-rpc-service = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "typescript" }
kaspa-utils = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "typescript" }
kaspa-wallet-core = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "typescript" }
kaspa-wallet-keys = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "typescript" }
kaspa-wrpc-client = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "typescript" }
kaspa-wrpc-server = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "typescript" }
kaspad = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "typescript" }

# _________________________________________________________
#  _ _ _ ____ ____ _  _ ____ _    ____ _ _ _    ____ ____ 
#  | | | |  | |__/ |_/  |___ |    |  | | | | __ |__/ [__  
#  |_|_| |__| |  \ | \_ |    |___ |__| |_|_|    |  \ ___] 
# _________________________________________________________

workflow-core = "0.12.0"
workflow-i18n = "0.12.0"
workflow-chrome = "0.12.0"
workflow-dom = "0.12.0"
workflow-http = "0.12.0"
workflow-log = "0.12.0"
workflow-store = "0.12.0"
workflow-wasm = "0.12.0"

# workflow-core = { path = "../workflow-rs/core" }
# workflow-i18n = { path = "../workflow-rs/i18n" }
# workflow-chrome = { path = "../workflow-rs/chrome" }
# workflow-dom = { path = "../workflow-rs/dom" }
# workflow-http = { path = "../workflow-rs/http" }
# workflow-log = { path = "../workflow-rs/log" }
# workflow-store = { path = "../workflow-rs/store" }
# workflow-wasm = { path = "../workflow-rs/wasm" }

# workflow-core = {  git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master", features = ["no-unsafe-eval"] }
# workflow-i18n = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-chrome = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-dom = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-http = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-log = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-store = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-wasm = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }

# ----------------------------------------
# ----------------------------------------
# ----------------------------------------

ahash = "0.8.6"
async-trait = "0.1.73"
borsh = { version = "0.9.1", features = ["rc"] } # please keep this fixed
cfg-if = "1.0.0"
chrome-sys = "0.2.0"
# chrome-sys = {path = "../chrome-sys"}
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive", "string", "cargo"] }
convert_case = "0.6.0"
crypto_box = { version = "0.9.1", features = ["chacha20"] }
ctrlc = { version = "3.2", features = ["termination"] }
derivative = "2.2.0"
downcast = "0.11.0"
downcast-rs = "1.2.0"
env_logger = "0.10"
futures = { version = "0.3.29" }
futures-util = { version = "0.3.29", default-features = false, features = ["alloc"] }
image = { version = "0.24.7", default-features = false, features = ["png"] }
js-sys = "0.3.64"
log = "0.4.20"
nix = "0.28.0"
num_cpus = "1.15.0"
open = "5.0.1"
pad = "0.1.6"
passwords = "3.1.16"
qrcode = "0.12.0"
rand = "0.8.5"
rfd = "0.12.1"
ritehash = "0.2.0"
rlimit = "0.10.1"
separator = "0.4.1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.108"
slug = "0.1.5"
smallvec = { version = "1.11.1", features = ["serde"] }
sysinfo = "0.29.10"
thiserror = "1.0.50"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "process"] }
toml = "0.8.12"
walkdir = "2.4.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.64", features = ['Window'] }
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }
zeroize = { version = "1", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = 2
# opt-level = 3
# lto = true

[profile.native-release]
inherits = "release"
opt-level = 3
lto = true
# strip = true
