[workspace]
resolver = "2"
members = [
    "app",
    "core",
    "macros",
    "extensions/chrome",
]
default-members = ["app"]

[workspace.package]
rust-version = "1.91.0"
version = "2.0.1"
authors = ["ASPECTRON Inc.","Kaspa Developers"]
license = "PROPRIETARY"
edition = "2024"
repository = "https://github.com/aspectron/kaspa-ng"

[workspace.dependencies]

kaspa-ng = { version = "2.0.1", path = "app/", default-features = false }
kaspa-ng-core = { version = "2.0.1", path = "core/", default-features = false }
kaspa-ng-macros = { version = "2.0.1", path = "macros/", default-features = false }

# ___________________
#  ____ ____ _  _ _ 
#  |___ | __ |  | | 
#  |___ |__] |__| | 
# ___________________

egui = "=0.34.3"
epaint = "=0.34.3"
egui_plot = "=0.35.0"
egui_extras = { version = "=0.34.3", features = ["svg","image"] }
eframe = { version = "=0.34.3",  default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "x11",           # Linux X11 backend (winit errors with no backend selected when default-features = false).
    "wayland",       # Linux Wayland backend.
    "persistence",   # Enable restoring app state when restarting the app.
] }

egui-phosphor = { version = "=0.12.0", features = ["thin","light","regular","bold"] }
egui-notify = { version = "=0.22.0"}


# egui =  { path="../egui/crates/egui", version="=0.28.1"}
# epaint =  { path="../egui/crates/epaint"}
# # epaint = "=0.28.1"
# egui_plot = "=0.28.1"
# # egui_plot = { path="../egui/crates/egui_plot"}
# egui_extras = { path="../egui/crates/egui_extras", features = ["svg","image", "serde"] }
# eframe = { path="../egui/crates/eframe", default-features = false, features = [
#     "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
#     "default_fonts", # Embed the default egui fonts.
#     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
#     "persistence",   # Enable restoring app state when restarting the app.
# ] }
# egui-phosphor = { path = "../egui-phosphor", version = "=0.6.0", features = ["thin","light","regular","bold"] }
# egui-notify = { path = "../egui-notify" }
# egui-toast = { path = "../egui-toast" }

# egui = { git = "https://github.com/aspectron/egui", branch = "gamma"}
# epaint =  { git = "https://github.com/aspectron/egui", branch = "gamma"}

# egui_plot = { git = "https://github.com/aspectron/egui_plot", branch = "gamma"}
# egui_extras = { git = "https://github.com/aspectron/egui", branch = "gamma", features = ["svg","image", "serde"] }
# eframe = { git = "https://github.com/aspectron/egui", branch = "gamma",  default-features = false, features = [
#     "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
#     "default_fonts", # Embed the default egui fonts.
#     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
#     "persistence",   # Enable restoring app state when restarting the app.
# ] }
# egui-phosphor = { git = "https://github.com/aspectron/egui-phosphor", branch = "gamma",  version = "=0.6.0", features = ["thin","light","regular","bold"] }
# egui-notify = { git = "https://github.com/aspectron/egui-notify",  branch = "gamma"}
# egui-toast = { git = "https://github.com/aspectron/egui-toast", branch = "omega" }

# egui = { path = "../egui/crates/egui" }
# egui_extras = { path = "../egui/crates/egui_extras", features = ["svg", "image"] }
# eframe = { path = "../egui/crates/eframe", default-features = false, features = [
#     "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
#     "default_fonts", # Embed the default egui fonts.
#     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
#     "persistence",   # Enable restoring app state when restarting the app.
# ] }
# egui-phosphor = { path = "../egui-phosphor", features = ["thin","light","regular","bold"] }
# egui-notify = { path = "../egui-notify" }
# egui-toast = { path = "../egui-toast" }

# _______________________________________________________
#  ____ _  _ ____ ___ _   _    _  _ ____ ____ ___  ____ 
#  |__/ |  | [__   |   \_/  __ |_/  |__| [__  |__] |__| 
#  |  \ |__| ___]  |    |      | \_ |  | ___] |    |  | 
# _______________________________________________________

# kaspa-addresses = "0.13.4"
# kaspa-alloc = "0.13.4"
# kaspa-bip32 = "0.13.4"
# kaspa-cli = "0.13.4"
# kaspa-consensus-core = "0.13.4"
# kaspa-core = "0.13.4"
# kaspa-metrics-core = "0.13.4"
# kaspa-notify = "0.13.4"
# kaspa-rpc-core = "0.13.4"
# kaspa-rpc-service = "0.13.4"
# kaspa-utils = "0.13.4"
# kaspa-wallet-core = "0.13.4"
# kaspa-wrpc-client = "0.13.4"
# kaspa-wrpc-server = "0.13.4"
# kaspad = "0.13.4"

# kaspa-addresses = { path = "../rusty-kaspa/crypto/addresses" }
# kaspa-alloc = { path = "../rusty-kaspa/utils/alloc" }
# kaspa-bip32 = { path = "../rusty-kaspa/wallet/bip32" }
# kaspa-cli = { path = "../rusty-kaspa/cli" }
# kaspa-consensus-core = { path = "../rusty-kaspa/consensus/core" }
# kaspa-core = { path = "../rusty-kaspa/core" }
# kaspa-metrics-core = { path = "../rusty-kaspa/metrics/core" }
# kaspa-notify = { path = "../rusty-kaspa/notify" }
# kaspa-rpc-core = { path = "../rusty-kaspa/rpc/core" }
# kaspa-rpc-service = { path = "../rusty-kaspa/rpc/service" }
# kaspa-utils = { path = "../rusty-kaspa/utils" }
# kaspa-wallet-core = { path = "../rusty-kaspa/wallet/core" }
# kaspa-wallet-keys = { path = "../rusty-kaspa/wallet/keys" }
# kaspa-wrpc-client = { path = "../rusty-kaspa/rpc/wrpc/client"}
# kaspa-wrpc-server = { path = "../rusty-kaspa/rpc/wrpc/server" }
# kaspa-txscript = { path = "../rusty-kaspa/crypto/txscript" }
# kaspad = { path = "../rusty-kaspa/kaspad" }

kaspa-addresses = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
kaspa-alloc = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
kaspa-bip32 = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
kaspa-cli = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
kaspa-consensus-core = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
kaspa-core = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
kaspa-metrics-core = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
kaspa-notify = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
kaspa-rpc-core = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
kaspa-rpc-service = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
kaspa-utils = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
kaspa-wallet-core = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
kaspa-wallet-keys = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
kaspa-wrpc-client = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
kaspa-wrpc-server = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
kaspa-txscript = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
kaspad = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }

# kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-alloc = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-bip32 = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-cli = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-metrics-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-notify = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-rpc-service = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-utils = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-wallet-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-wallet-keys = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-wrpc-server = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspad = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }

# _________________________________________________________
#  _ _ _ ____ ____ _  _ ____ _    ____ _ _ _    ____ ____ 
#  | | | |  | |__/ |_/  |___ |    |  | | | | __ |__/ [__  
#  |_|_| |__| |  \ | \_ |    |___ |__| |_|_|    |  \ ___] 
# _________________________________________________________

workflow-core = "0.19.0"
workflow-i18n = "0.19.0"
workflow-chrome = "0.19.0"
workflow-dom = "0.19.0"
workflow-log = "0.19.0"
workflow-store = "0.19.0"
workflow-wasm = "0.19.0"
# `default-features = false` + `rustls-no-provider` so reqwest does not pull the
# aws-lc-rs crypto provider (C/cmake); the pure-Rust `ring` provider is installed
# at startup (app main + the wRPC SDK). Mirrors rusty-kaspa's declaration.
workflow-http = { version = "0.19.0", default-features = false, features = ["rustls-no-provider", "http2", "charset", "system-proxy"] }

# workflow-core = { path = "../workflow-rs/core" }
# workflow-i18n = { path = "../workflow-rs/i18n" }
# workflow-chrome = { path = "../workflow-rs/chrome" }
# workflow-dom = { path = "../workflow-rs/dom" }
# workflow-log = { path = "../workflow-rs/log" }
# workflow-store = { path = "../workflow-rs/store" }
# workflow-wasm = { path = "../workflow-rs/wasm" }
# `default-features = false` + `rustls-no-provider` so reqwest does not pull the
# aws-lc-rs crypto provider (C/cmake); the pure-Rust `ring` provider is installed
# at startup (app main + the wRPC SDK). Mirrors rusty-kaspa's declaration.
# workflow-http = { path = "../workflow-rs/http", default-features = false, features = ["rustls-no-provider", "http2", "charset", "system-proxy"] }

# workflow-core = {  git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master", features = ["no-unsafe-eval"] }
# workflow-i18n = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-chrome = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-dom = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-http = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-log = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-store = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-wasm = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }

# ----------------------------------------
# ----------------------------------------
# ----------------------------------------

ahash = "0.8.12"
async-trait = "0.1.89"
borsh = { version = "1.7.0", features = ["derive", "rc"] }
cfg-if = "1.0.4"
chrome-sys = "0.2.0"
# chrome-sys = {path = "../chrome-sys"}
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive", "string", "cargo"] }
convert_case = "0.11.0"
crypto_box = { version = "0.9.1", features = ["chacha20"] }
ctrlc = { version = "3.5", features = ["termination"] }
derivative = "2.2.0"
downcast = "0.11.0"
downcast-rs = "2.0.2"
env_logger = "0.11"
futures = { version = "0.3.32" }
futures-util = { version = "0.3.32", default-features = false, features = ["alloc"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
js-sys = "0.3.103"
log = "0.4.33"
nix = { version = "0.31.3", features = ["signal"]}
num_cpus = "1.17.0"
open = "5.3.5"
pad = "0.1.6"
passwords = "3.1.16"
qrcode = "0.14.1"
rand = "0.10.1"
rfd = "0.17.2"
ritehash = "0.2.0"
rlimit = "0.11.0"
separator = "0.4.1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.150"
slug = "0.1.6"
smallvec = { version = "1.15.2", features = ["serde"] }
sysinfo = "0.39.5"
thiserror = "2.0.18"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "process"] }
toml = "1.1.2"
walkdir = "2.5.0"
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.103", features = ['Window'] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
zeroize = { version = "1", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = 2
# lto = true
# opt-level = 3

[profile.native-release]
inherits = "release"
opt-level = 3
# lto = true
# strip = true

[profile.console]
inherits = "release"
opt-level = 2
strip = false
# lto = true
# strip = true
