[package]
name = "kaspa-ng"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
kaspa-ng-core.workspace = true
workflow-log.workspace = true
cfg-if.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kaspa-alloc.workspace = true
tokio.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
