[package]
name = "kaspa-ng"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "Kaspa NG - Desktop p2p node based on Rusty Kaspa"
readme = "../README.md"

[features]
console = ["kaspa-ng-core/console"]

[dependencies]
kaspa-ng-core.workspace = true
workflow-log.workspace = true
cfg-if.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kaspa-alloc.workspace = true
tokio.workspace = true
# Install the process-level rustls crypto provider (ring) at startup, before any
# direct workflow-http (reqwest) use such as market/release fetches. The wRPC SDK
# also does this on client construction; both calls are idempotent.
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
