[package]
name = "kaspa-ng-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
description = "Core framework for Kaspa NG"
build = "build.rs"

[lib]
crate-type = ["cdylib", "lib"]

[features]
browser-extension = ["lean"]
mobile = ["lean"]
lean = []
cli = []
default = []
# default = ["browser-extension"]

[build-dependencies]
vergen = { version = "8.2.6", features = ["build", "git", "gitcl", "rustc", "cargo"] }

[dependencies]
kaspa-addresses.workspace = true
kaspa-bip32.workspace = true
kaspa-cli.workspace = true
kaspa-consensus-core.workspace = true
kaspa-core.workspace = true
kaspa-metrics-core.workspace = true
kaspa-ng-macros.workspace = true
kaspa-notify.workspace = true
kaspa-rpc-core.workspace = true
kaspa-utils.workspace = true
kaspa-wallet-core.workspace = true
kaspa-wallet-keys.workspace = true
kaspa-wrpc-client.workspace = true

workflow-core.workspace = true
workflow-i18n.workspace = true
workflow-dom.workspace = true
workflow-http.workspace = true
workflow-log.workspace = true
workflow-store.workspace = true
workflow-wasm.workspace = true
chrome-sys.workspace = true

ahash.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
convert_case.workspace = true
derivative.workspace = true
downcast-rs.workspace = true
downcast.workspace = true
futures-util.workspace = true
futures.workspace = true
image.workspace = true
js-sys.workspace = true
log.workspace = true
pad.workspace = true
passwords.workspace = true
qrcode.workspace = true
rand.workspace = true
rfd.workspace = true
ritehash.workspace = true
separator.workspace = true
serde_json.workspace = true
serde.workspace = true
slug.workspace = true
smallvec.workspace = true
thiserror.workspace = true
toml.workspace = true
walkdir.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
xxhash-rust.workspace = true
zeroize.workspace = true

egui.workspace = true
epaint.workspace = true
egui_plot.workspace = true
egui_extras.workspace = true
chrono.workspace = true
eframe = { workspace = true, default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    # "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui-phosphor = { workspace = true, features = ["thin","light","regular","bold"] }
egui-notify.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    'Document',
    'VisibilityState',
    'Window',
    'Element',
]


# -- native
[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap.workspace = true
ctrlc.workspace = true
env_logger.workspace = true
kaspa-core.workspace = true
kaspa-rpc-service.workspace = true
kaspa-wrpc-server.workspace = true
kaspad.workspace = true
num_cpus.workspace = true
open.workspace = true
rlimit.workspace = true
sysinfo.workspace = true
tokio.workspace = true

# -- web
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true

